force-app/main/default/objects/E_MOC_Hold_History__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Hold History</relationshipLabel>
        <relationshipName>E_MOC_Hold_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Reminder_Date__c</fullName>
        <label>Next Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept Approval</fullName>
                </value>
                <value>
                    <fullName>Budget Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept Approval</fullName>
                </value>
                <value>
                    <fullName>Budget Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E-MOC Hold History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Comment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EHIS-{00000000}</displayFormat>
        <label>E-MOC Hold History No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>